[package]
name = "rsgit"
version = "0.1.3"
edition = "2021"
authors = ["werdl"]
description = "A simple to use, safe Git wrapper for Rust"
reamde = "README.md"
repository = "https://github.com/werdl/rsgit"
license = "Apache-2.0"
keywords = ["git", "cli", "wrapper"]
documentation = "https://docs.rs/rsgit/"